--- a/catalog-service-testdata.yaml
+++ b/catalog-service-testdata.yaml
@@ -1,2 +1,2 @@
 polar:
-  greeting: "Welcome to the dev catalog from the config server with test data profile"
+  greeting: "Welcome to the dev catalog from the config server with refresh test data profile"
